// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the comma array preview component should comma separate values 1`] = `
<PlainText
  label="foo"
  value="1, 2"
/>
`;

exports[`the comma array preview component should handle empty array 1`] = `
<PlainText
  label="foo"
  value=""
/>
`;
